# ap-mcp

./: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  justfile  pyproject.toml
.copier/: .copier-answers.copier-python-project.yml
.github/workflows/: ci.yml  python-test.yml
src/: main.py
src/core/: __init__.py  logging.conf  registry.py  verbose_config.toml
src/core/communication/: router.py
src/core/embedder/: sentence_embedder.py
src/core/exceptions/: __init__.py
src/core/llm/: __init__.py  local_llm.py
src/core/logger/: logging.conf  logging.py
src/core/models/: __init__.py  communication.py  manifest.py
src/core/orchestrator/: llm_orchestrator.py
src/core/registry/: __init__.py  registry.py  router.py
src/core/vec_db/: __init__.py  dbase.py
src/core_tools/: router.py  service.py
src/server/core/: __init__.py
src/server/core/communication/: __init__.py  router.py
src/server/core/embedder/: __init__.py  (+1 more)
src/server/core_tools/: __init__.py
src/tools/: __init__.py
src/tools/tool_manager/: __init__.py  router.py  service.py
src/ui/: Dockerfile
src/ui/templates/: index.html
tests/: test_calculator.py  test_manifest.py
tests/tool_sdk/: test_manifest.py
tests/tools/calculator_tool/: test_calculator.py
tool_sdk/: pyproject.toml
tool_sdk/src/tool_sdk/: __init__.py  app.py  logging.py
tools/calculator_tool/: Dockerfile  pyproject.toml
tools/calculator_tool/src/: router.py  service.py
ui/: Dockerfile  app.py  requirements.txt
ui/templates/: index.html
(+14 files in other folders)
