[project]
name = "ap-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.119.0",
    "google-genai>=1.45.0",
    "numpy>=2.3.4",
    "pydantic>=2.12.3",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.38.0",
    "httpx>=0.27.2",
]
